flashcard app, fix dropdown entry alignment

--- a/17-flashcard-app/flashcard-uix/src/app/components/dropdown.css
+++ b/17-flashcard-app/flashcard-uix/src/app/components/dropdown.css
@@ -23,6 +23,7 @@
 .dropdown__entry {
     padding: var(--spacing-100) var(--spacing-200);
     display: flex;
+    align-items: center;
     gap: var(--spacing-100);
 }
 
